dist_man1_MANS=

if BUILD_ETITANIUMD
  dist_man1_MANS+=etitaniumd.1
endif

if ENABLE_QT
  dist_man1_MANS+=etitanium-qt.1
endif

if BUILD_ETITANIUM_CLI
  dist_man1_MANS+=etitanium-cli.1
endif

if BUILD_ETITANIUM_TX
  dist_man1_MANS+=etitanium-tx.1
endif

if ENABLE_WALLET
if BUILD_ETITANIUM_WALLET
  dist_man1_MANS+=etitanium-wallet.1
endif
endif
